In Search Interface experiences Top-down and Bottom-Up text changed to Search Bar and Assistant

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -31,7 +31,7 @@
                                 <input id="radio-2" name="topdown" value='top' class="radio-custom" type="radio"
                                     [(ngModel)]="searchObject.searchExperienceConfig.searchBarPosition"
                                     (click)="changeSlider('top')">
-                                <label for="radio-2" class="radio-custom-label">{{'searchexperience.top_down' |
+                                <label for="radio-2" class="radio-custom-label">{{'searchexperience.search_bar' |
                                     translate}}</label>
                                 <div class="desc-tect">{{'searchexperience.searchBar_at_the_top' | translate}}</div>
                             </div>
@@ -39,7 +39,7 @@
                                 <input id="radio-22" name="bottomup" value='bottom' class="radio-custom" type="radio"
                                     [(ngModel)]="searchObject.searchExperienceConfig.searchBarPosition"
                                     (click)="changeSlider('bottom')">
-                                <label for="radio-22" class="radio-custom-label">{{'searchexperience.bottom_up' |
+                                <label for="radio-22" class="radio-custom-label">{{'searchexperience.assistant' |
                                     translate}}</label>
                                 <div class="desc-tect">{{'searchexperience.search_bar_at_the_bottom' | translate}}</div>
                             </div>
