--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -7219,7 +7219,7 @@ body{
 .searchAssist-kore-chat-window.search-container.conversation #searchChatContainer{
     display: block !important;
     position: relative;
-    padding: 34px 20px calc(100vh - 200px);
+    padding: 34px 20px;
     overflow: auto;
 }
 .searchAssist-kore-chat-window.search-container.conversation #searchChatContainer.bgfocus{   
