FLY-3253 : javascript rendered

--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -1860,3 +1860,10 @@
         margin: 15px 0;
     }
 }
+
+/* Chrome, Safari, Edge, Opera */
+.maxUrlLimit-class::-webkit-outer-spin-button,
+.maxUrlLimit-class::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
