--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -865,7 +865,7 @@
                             </span>
                           </div>
                         </div>
-                          <input type="number" autocomplete="off" id="maxUrlLimit" maxlength="60" name="maxUrlLimit" max="500"
+                          <input type="number" autocomplete="off" id="maxUrlLimit" maxlength="60" name="maxUrlLimit"  min="500"
                           placeholder="0" (keyup)="checkValue(maxUrlLimit,'maxUrlLimit')" [(ngModel)]="maxUrlLimit"
                           class="input-text maxUrlLimit-class">
                       </div>
