--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -14944,6 +14944,17 @@ margin-bottom: 15px !important;
         padding-right: 0;
         max-width: 86%;
     }
+    .filter-sec-tab .kr-sg-radiobutton .radio-custom+.radio-custom-label{
+        padding: 4px 0px 14px 28px !important;
+        margin-bottom: 0px !important;
+        line-height: 14px;
+    }
+    #topFacetFilterId .horizantal-filter-sec .kr-sg-radiobutton{
+        padding: 7px 12px 0px 10px !important;
+    }
+    #topFacetFilterId .horizantal-filter-sec .kr-sg-radiobutton .radio-custom+.radio-custom-label{
+        padding: 3px 0px 7px 28px !important;
+    }
     .kr-sg-radiobutton .associated-filter-count{
         color: var(--sdk-dusty-gray-color);
         position: absolute;
