--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -12937,7 +12937,7 @@ border: 0;
 .searchAssist-kore-chat-window .show-all-results-outer-wrap .search-heads.show-all.sdk-show-classification{
     text-transform: none;
     font-size: 12px;
-    color: var(--sdk-gray-color) !important;
+    color: var(--sdk-primary-blue-color) !important;
     margin-top: 0px;
 }
 
