--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -678,7 +678,11 @@
                                     <div class="avatar-with-greeting-text">
                                         <div class="greeting-message-avatar"
                                             [ngStyle]="{'background':searchObject.searchInteractionsConfig.welcomeMsgFillColor,'color':searchObject.searchInteractionsConfig.welcomeMsgColor}">
-                                            {{searchObject.searchInteractionsConfig.welcomeMsg}}</div>
+                                            {{searchObject.searchInteractionsConfig.welcomeMsg}}
+                                            <div class="arrow-bottom-" [ngStyle]="{'background':searchObject.searchInteractionsConfig.welcomeMsgFillColor,'color':searchObject.searchInteractionsConfig.welcomeMsgColor}">
+
+                                            </div>
+                                        </div>
                                         <div class="avatar-img">
                                             <img src="assets/icons/search-interface/avatar-sdk.svg">
                                         </div>
