--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -419,7 +419,7 @@
                         color: #5F6368;
                         margin-bottom: 0;
                         margin-top: 0;
-                        max-width: 150px;
+                        max-width: 200px;
                         text-overflow: ellipsis;
                         overflow: hidden;
                         white-space: nowrap;
@@ -429,17 +429,18 @@
                 }
                 .user-name{
                     position: absolute;
-                    right: 7px;
-                    bottom: 15px;
-                    color: #9AA0A6;
-                    font-weight: normal;
-                    font-size: 12px;
-                    line-height: 15px;
-                    // Text overflow
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                    display: block;
-                    width: 150px;
+                 right: 22px;
+                 bottom: 12px;
+                 color: #9aa0a6;
+                 font-weight: 400;
+                  font-size: 12px;
+                 line-height: 15px;
+                 display: block;
+                 width: auto;
+                 overflow: hidden;
+                 white-space: nowrap;
+                 text-overflow: ellipsis;
+                 max-width: 140px;
                 }
             }            
         }
