--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -708,8 +708,8 @@
                             </span>
                           </div>
                         </div>
-                        <input type="number" autocomplete="off" id="maxUrlLimit" maxlength="60" name="maxUrlLimit" min="500"
-                          placeholder="0" (keyup)="checkValue(maxUrlLimit , 'maxUrlLimit')" [(ngModel)]="maxUrlLimit"
+                        <input type="number" autocomplete="off" id="maxUrlLimit" maxlength="60" name="maxUrlLimit"
+                          placeholder="500" (keyup)="checkValue(maxUrlLimit , 'maxUrlLimit')" [(ngModel)]="maxUrlLimit"
                           class="input-text maxUrlLimit-class">
                       </div>
                     </div>
