--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -1049,7 +1049,7 @@
                                 margin-bottom: 26px;
                             }
                             .kr-sg-input-search{                                
-                                box-shadow: -16px -16px 64px rgba(255, 255, 255, 0.8), -1px 2px 30px rgba(18, 61, 101, 0.4), inset -8px -6px 80px rgba(255, 255, 255, 0.18);
+                                //box-shadow: -16px -16px 64px rgba(255, 255, 255, 0.8), -1px 2px 30px rgba(18, 61, 101, 0.4), inset -8px -6px 80px rgba(255, 255, 255, 0.18);
                                 border-radius: 6px;
                                 width: 485px;
                                 margin: 0;
