--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -140,7 +140,7 @@
     <div class="desc">Reorder the conditioned responses to execute in specific order</div>
   </div> -->
   <ng-container *ngFor="let faqObj of faqResponse.defaultAnswers ; let index = index">
-    <div class="body-top-content pointer" title="Click to edit this response" (click)="currentEditIndex = index">
+    <div class="body-top-content pointer"  (click)="currentEditIndex = index">
       <div class="question-content">
         <div class="label-text" *ngIf="index==0">Response <span *ngIf="faqData && faqResponse.defaultAnswers.length>1">({{faqResponse.defaultAnswers.length}})</span>  <div class="deleteResponseDiv red" *ngIf="faqResponse.defaultAnswers.length == 1" (click)="$event.stopPropagation();delete(index)" ngbTooltip="Delete"><img src="assets/images/delete_response.svg"></div></div>
        
@@ -219,7 +219,8 @@
         </div>
       </div>   
     </div>
-    <div class="col-12 p-0 pointer body_sec" title="Click to edit this response" [hidden]="currentEditIndex == index">
+    <!-- title="Click to edit this response" -->
+    <div class="col-12 p-0 pointer body_sec"  [hidden]="currentEditIndex == index">
       <div class="previewResponseMod">
       <div class="responsePreviewBlock">
       <ng-container *ngTemplateOutlet="botResponsePreview; context{$implicit: faqResponse,responses:faqResponse.defaultAnswers,responseObj:faqObj,reponseType:'default',id:'default_',index:index }"> </ng-container>
