--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -227,11 +227,10 @@
                 <label for="radio-23" class="radio-custom-label">Script</label>
               </div>
             </div>
-            <div class="conditions-input-sec" *ngFor="let basic of selectedStage.condition.mappings;let i=index;"
-              [hidden]="selectedStage.condition.type=='script'">
+            <div class="conditions-input-sec" *ngFor="let basic of selectedStage.condition.mappings;let i=index;" [hidden]="selectedStage.condition.type=='script'">
               <div class="conditions-types">
                 <div class="and-seperator" *ngIf="selectedStage.condition.mappings.length>1&&i>0">And</div>
-                <div class="kr-sg-input-text">
+                <div class="kr-sg-input-text col-8">
                   <div class="position-relative">
                     <input type="text" placeholder="Enter Field" maxlength="60" (keyup)="changesDetected = true"
                       class="input-text dropdown-toggle dropdown-input" data-toggle="dropdown"
@@ -247,7 +246,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="kr-sg-dropdowns">
+                <div class="kr-sg-dropdowns col-4">
                   <div class="dropdown dropdown-open">
                     <button class="dropdown-toggle dropdown-input"
                       data-toggle="dropdown">{{basic.operator==''?'Operator':basic.operator}}</button>
